[tool.poetry]
name = "MyDocs"
version = "0.1.0"
description = "Getting Started with gRPC using CONAN Packages"
authors = ["Thomas Hochstrasser <thommyho1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.0.11"
mkdocs-material-extensions = "^1.1.1"
mike = "^1.1.2"
markdown-include = "^0.8.0"
pymdown-extensions = "^9.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
